Implementa consulta de fechamento de caixa do dia
